[package]
authors = ["Federico Frigerio","Filippo Lollato","Alessio Blascovich","Federico Menegoz","Davide Castellani","Alessio Amiri","mpossamai107","Marco ཀ ʖ̯ ཀ","Andrea Bissoli","Gianluca R.","Praisethefab"]
name = "robotics_lib"
version = "0.0.1"
edition = "2021"
exclude = [".*"]

[lib]
name = "robotics_lib"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = [] }
strum = "0.25.0"
strum_macros = { version = "0.25.3", features = [] }
log = "0.4.20"
image = "0.24.7"
viuer = "0.7.1"