[package]
name = "exclusion_zone_world_generator"
version = "0.1.0"
edition = "2021"
authors = ["Marco Toniolo @Toniolo-Marco", "Federico Frigerio @FrostWalk"]
description = "Let your robot feel the vibes of Černobyl like in the 1986 USSR."
readme = "README.md"
repository = "https://github.com/RustyPripyat/World-Generator"
license-file = "LICENSE.txt"
keywords = ["world_generator"]
exclude = ["rustfmt.toml", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "exclusion_zone"
path = "src/lib.rs"

# comment when publishing to kellnr
[[bin]]
name = "bin"
path = "bin/main.rs"

[dependencies]
robotics_lib = { version = "0.1.21", registry = "kellnr"}
rand = "0.8.5"
noise = "0.8.2"
rayon = "1.8.0"
chrono = "0.4.31" # Only for debug porpouse
voronator = "0.2.1"
debug_print = "1.0.0"# Only for debug porpouse
nannou_core = "0.18.0"
image = "0.24.7" # Only in visualizer, comment when publishing to kellnr
